stateful-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql  
  namespace: advanced-workload
spec:
  selector:
    app: mysql  
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
