network-policy-faulty-fix.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysql-network-policy
  namespace: advanced-workload
spec:
  podSelector:
    matchLabels:
      app: mysql
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            name: advanced-workload
        podSelector:
          matchLabels:
            app: app
      ports:
        - protocol: TCP
          port: 3306
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: advanced-workload
      ports:
        - protocol: TCP
          port: 80
